tests/errors/err_int_list_to_str_param.mix
// ERROR: expected \[str\], got \[int\]
f(words: [str]) ~
    print(words)

main()
    f([1, 2, 3])
